src/parser.output
Terminals unused in grammar

   T_DOT
   T_PTRMEM
   T_LONG


State 0 conflicts: 1 shift/reduce
State 5 conflicts: 1 shift/reduce
State 22 conflicts: 1 shift/reduce
State 27 conflicts: 1 shift/reduce
State 64 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 126 conflicts: 1 shift/reduce
State 127 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: stmt
    3          | stmt stmt_list

    4 cmpd_stmt: T_LCBRK T_RCBRK
    5          | T_LCBRK stmt_list T_RCBRK

    6 stmt: cmpd_stmt
    7     | expr_stmt
    8     | cond_stmt
    9     | iter_stmt

   10 declaration: decl_spec
   11            | decl_spec T_ASN asn_expr T_SEMIC

   12 iter_stmt: T_FOR T_LPAREN expr_stmt expr_stmt expr T_RPAREN stmt
   13          | T_FOR T_LPAREN expr_stmt expr_stmt T_RPAREN stmt
   14          | T_WHILE T_LPAREN expr T_RPAREN stmt
   15          | T_DO stmt T_WHILE T_LPAREN expr T_RPAREN T_SEMIC

   16 cond_stmt: T_IF T_LPAREN asn_expr T_RPAREN stmt
   17          | T_IF T_LPAREN asn_expr T_RPAREN stmt T_ELSE stmt

   18 expr_stmt: T_SEMIC
   19          | expr T_SEMIC
   20          | declaration

   21 expr: asn_expr
   22     | expr T_COMMA asn_expr

   23 asn_expr: %empty
   24         | or_expr
   25         | unary asn_op asn_expr

   26 unary: postfix
   27      | T_INC unary
   28      | T_DEC unary
   29      | uni_op unary

   30 uni_op: T_SUB
   31       | T_MUL
   32       | T_BAND

   33 postfix: primary
   34        | postfix T_LBRCK expr T_RBRCK
   35        | postfix T_INC
   36        | postfix T_DEC

   37 asn_op: T_ASN

   38 primary: ident
   39        | const
   40        | T_LPAREN or_expr T_RPAREN

   41 ident: T_IDENT

   42 const: T_CINT
   43      | T_CDOUBLE

   44 band_expr: eq_expr
   45          | band_expr T_BAND eq_expr

   46 xor_expr: band_expr
   47         | xor_expr T_XOR band_expr

   48 bor_expr: xor_expr
   49         | bor_expr T_BOR xor_expr

   50 and_expr: bor_expr
   51         | and_expr T_AND bor_expr

   52 or_expr: and_expr
   53        | or_expr T_OR and_expr

   54 rel_expr: add_expr
   55         | rel_expr T_LT add_expr
   56         | rel_expr T_GT add_expr
   57         | rel_expr T_LTE add_expr
   58         | rel_expr T_GTE add_expr

   59 eq_expr: rel_expr
   60        | eq_expr T_EQ rel_expr
   61        | eq_expr T_NEQ rel_expr

   62 add_expr: mul_expr
   63         | add_expr T_PLUS mul_expr
   64         | add_expr T_SUB mul_expr

   65 mul_expr: unary
   66         | mul_expr T_MUL unary
   67         | mul_expr T_DIV unary

   68 type_spec: T_VOID
   69          | T_UNSIGNED T_CHAR
   70          | T_SIGNED T_CHAR
   71          | T_CHAR
   72          | T_UNSIGNED T_SHORT
   73          | T_SIGNED T_SHORT
   74          | T_SHORT
   75          | T_UNSIGNED T_INT
   76          | T_SIGNED T_INT
   77          | T_INT
   78          | T_FLOAT
   79          | T_DOUBLE

   80 decl_spec: type_spec declr

   81 declr: pointer dir_declr

   82 pointer: %empty
   83        | T_MUL pointer

   84 dir_declr: ident
   85          | T_LPAREN declr T_RPAREN
   86          | dir_declr T_LPAREN T_RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
T_IDENT (258) 41
T_CINT (259) 42
T_CDOUBLE (260) 43
T_ASN (261) 11 37
T_EQ (262) 60
T_NEQ (263) 61
T_LT (264) 55
T_LTE (265) 57
T_LPAREN (266) 12 13 14 15 16 17 40 85 86
T_RPAREN (267) 12 13 14 15 16 17 40 85 86
T_LCBRK (268) 4 5
T_RCBRK (269) 4 5
T_DOT (270)
T_COMMA (271) 22
T_MUL (272) 31 66 83
T_DIV (273) 67
T_PLUS (274) 63
T_SUB (275) 30 64
T_PTRMEM (276)
T_INC (277) 27 35
T_DEC (278) 28 36
T_LBRCK (279) 34
T_RBRCK (280) 34
T_GTE (281) 58
T_GT (282) 56
T_SEMIC (283) 11 15 18 19
T_VOID (284) 68
T_CHAR (285) 69 70 71
T_SHORT (286) 72 73 74
T_INT (287) 75 76 77
T_LONG (288)
T_SIGNED (289) 70 73 76
T_UNSIGNED (290) 69 72 75
T_FLOAT (291) 78
T_DOUBLE (292) 79
T_IF (293) 16 17
T_ELSE (294) 17
T_FOR (295) 12 13
T_WHILE (296) 14 15
T_DO (297) 15
T_BAND (298) 32 45
T_AND (299) 51
T_BOR (300) 49
T_OR (301) 53
T_XOR (302) 47


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
stmt_list (50)
    on left: 2 3, on right: 1 3 5
cmpd_stmt (51)
    on left: 4 5, on right: 6
stmt (52)
    on left: 6 7 8 9, on right: 2 3 12 13 14 15 16 17
declaration (53)
    on left: 10 11, on right: 20
iter_stmt (54)
    on left: 12 13 14 15, on right: 9
cond_stmt (55)
    on left: 16 17, on right: 8
expr_stmt (56)
    on left: 18 19 20, on right: 7 12 13
expr (57)
    on left: 21 22, on right: 12 14 15 19 22 34
asn_expr (58)
    on left: 23 24 25, on right: 11 16 17 21 22 25
unary (59)
    on left: 26 27 28 29, on right: 25 27 28 29 65 66 67
uni_op (60)
    on left: 30 31 32, on right: 29
postfix (61)
    on left: 33 34 35 36, on right: 26 34 35 36
asn_op (62)
    on left: 37, on right: 25
primary (63)
    on left: 38 39 40, on right: 33
ident (64)
    on left: 41, on right: 38 84
const (65)
    on left: 42 43, on right: 39
band_expr (66)
    on left: 44 45, on right: 45 46 47
xor_expr (67)
    on left: 46 47, on right: 47 48 49
bor_expr (68)
    on left: 48 49, on right: 49 50 51
and_expr (69)
    on left: 50 51, on right: 51 52 53
or_expr (70)
    on left: 52 53, on right: 24 40 53
rel_expr (71)
    on left: 54 55 56 57 58, on right: 55 56 57 58 59 60 61
eq_expr (72)
    on left: 59 60 61, on right: 44 45 60 61
add_expr (73)
    on left: 62 63 64, on right: 54 55 56 57 58 63 64
mul_expr (74)
    on left: 65 66 67, on right: 62 63 64 66 67
type_spec (75)
    on left: 68 69 70 71 72 73 74 75 76 77 78 79, on right: 80
decl_spec (76)
    on left: 80, on right: 10 11
declr (77)
    on left: 81, on right: 80 85
pointer (78)
    on left: 82 83, on right: 81 83
dir_declr (79)
    on left: 84 85 86, on right: 81 86


State 0

    0 $accept: . program $end

    T_IDENT     shift, and go to state 1
    T_CINT      shift, and go to state 2
    T_CDOUBLE   shift, and go to state 3
    T_LPAREN    shift, and go to state 4
    T_LCBRK     shift, and go to state 5
    T_MUL       shift, and go to state 6
    T_SUB       shift, and go to state 7
    T_INC       shift, and go to state 8
    T_DEC       shift, and go to state 9
    T_SEMIC     shift, and go to state 10
    T_VOID      shift, and go to state 11
    T_CHAR      shift, and go to state 12
    T_SHORT     shift, and go to state 13
    T_INT       shift, and go to state 14
    T_SIGNED    shift, and go to state 15
    T_UNSIGNED  shift, and go to state 16
    T_FLOAT     shift, and go to state 17
    T_DOUBLE    shift, and go to state 18
    T_IF        shift, and go to state 19
    T_FOR       shift, and go to state 20
    T_WHILE     shift, and go to state 21
    T_DO        shift, and go to state 22
    T_BAND      shift, and go to state 23

    T_SEMIC   [reduce using rule 23 (asn_expr)]
    $default  reduce using rule 23 (asn_expr)

    program      go to state 24
    stmt_list    go to state 25
    cmpd_stmt    go to state 26
    stmt         go to state 27
    declaration  go to state 28
    iter_stmt    go to state 29
    cond_stmt    go to state 30
    expr_stmt    go to state 31
    expr         go to state 32
    asn_expr     go to state 33
    unary        go to state 34
    uni_op       go to state 35
    postfix      go to state 36
    primary      go to state 37
    ident        go to state 38
    const        go to state 39
    band_expr    go to state 40
    xor_expr     go to state 41
    bor_expr     go to state 42
    and_expr     go to state 43
    or_expr      go to state 44
    rel_expr     go to state 45
    eq_expr      go to state 46
    add_expr     go to state 47
    mul_expr     go to state 48
    type_spec    go to state 49
    decl_spec    go to state 50


State 1

   41 ident: T_IDENT .

    $default  reduce using rule 41 (ident)


State 2

   42 const: T_CINT .

    $default  reduce using rule 42 (const)


State 3

   43 const: T_CDOUBLE .

    $default  reduce using rule 43 (const)


State 4

   40 primary: T_LPAREN . or_expr T_RPAREN

    T_IDENT    shift, and go to state 1
    T_CINT     shift, and go to state 2
    T_CDOUBLE  shift, and go to state 3
    T_LPAREN   shift, and go to state 4
    T_MUL      shift, and go to state 6
    T_SUB      shift, and go to state 7
    T_INC      shift, and go to state 8
    T_DEC      shift, and go to state 9
    T_BAND     shift, and go to state 23

    unary      go to state 51
    uni_op     go to state 35
    postfix    go to state 36
    primary    go to state 37
    ident      go to state 38
    const      go to state 39
    band_expr  go to state 40
    xor_expr   go to state 41
    bor_expr   go to state 42
    and_expr   go to state 43
    or_expr    go to state 52
    rel_expr   go to state 45
    eq_expr    go to state 46
    add_expr   go to state 47
    mul_expr   go to state 48


State 5

    4 cmpd_stmt: T_LCBRK . T_RCBRK
    5          | T_LCBRK . stmt_list T_RCBRK

    T_IDENT     shift, and go to state 1
    T_CINT      shift, and go to state 2
    T_CDOUBLE   shift, and go to state 3
    T_LPAREN    shift, and go to state 4
    T_LCBRK     shift, and go to state 5
    T_RCBRK     shift, and go to state 53
    T_MUL       shift, and go to state 6
    T_SUB       shift, and go to state 7
    T_INC       shift, and go to state 8
    T_DEC       shift, and go to state 9
    T_SEMIC     shift, and go to state 10
    T_VOID      shift, and go to state 11
    T_CHAR      shift, and go to state 12
    T_SHORT     shift, and go to state 13
    T_INT       shift, and go to state 14
    T_SIGNED    shift, and go to state 15
    T_UNSIGNED  shift, and go to state 16
    T_FLOAT     shift, and go to state 17
    T_DOUBLE    shift, and go to state 18
    T_IF        shift, and go to state 19
    T_FOR       shift, and go to state 20
    T_WHILE     shift, and go to state 21
    T_DO        shift, and go to state 22
    T_BAND      shift, and go to state 23

    T_SEMIC   [reduce using rule 23 (asn_expr)]
    $default  reduce using rule 23 (asn_expr)

    stmt_list    go to state 54
    cmpd_stmt    go to state 26
    stmt         go to state 27
    declaration  go to state 28
    iter_stmt    go to state 29
    cond_stmt    go to state 30
    expr_stmt    go to state 31
    expr         go to state 32
    asn_expr     go to state 33
    unary        go to state 34
    uni_op       go to state 35
    postfix      go to state 36
    primary      go to state 37
    ident        go to state 38
    const        go to state 39
    band_expr    go to state 40
    xor_expr     go to state 41
    bor_expr     go to state 42
    and_expr     go to state 43
    or_expr      go to state 44
    rel_expr     go to state 45
    eq_expr      go to state 46
    add_expr     go to state 47
    mul_expr     go to state 48
    type_spec    go to state 49
    decl_spec    go to state 50


State 6

   31 uni_op: T_MUL .

    $default  reduce using rule 31 (uni_op)


State 7

   30 uni_op: T_SUB .

    $default  reduce using rule 30 (uni_op)


State 8

   27 unary: T_INC . unary

    T_IDENT    shift, and go to state 1
    T_CINT     shift, and go to state 2
    T_CDOUBLE  shift, and go to state 3
    T_LPAREN   shift, and go to state 4
    T_MUL      shift, and go to state 6
    T_SUB      shift, and go to state 7
    T_INC      shift, and go to state 8
    T_DEC      shift, and go to state 9
    T_BAND     shift, and go to state 23

    unary    go to state 55
    uni_op   go to state 35
    postfix  go to state 36
    primary  go to state 37
    ident    go to state 38
    const    go to state 39


State 9

   28 unary: T_DEC . unary

    T_IDENT    shift, and go to state 1
    T_CINT     shift, and go to state 2
    T_CDOUBLE  shift, and go to state 3
    T_LPAREN   shift, and go to state 4
    T_MUL      shift, and go to state 6
    T_SUB      shift, and go to state 7
    T_INC      shift, and go to state 8
    T_DEC      shift, and go to state 9
    T_BAND     shift, and go to state 23

    unary    go to state 56
    uni_op   go to state 35
    postfix  go to state 36
    primary  go to state 37
    ident    go to state 38
    const    go to state 39


State 10

   18 expr_stmt: T_SEMIC .

    $default  reduce using rule 18 (expr_stmt)


State 11

   68 type_spec: T_VOID .

    $default  reduce using rule 68 (type_spec)


State 12

   71 type_spec: T_CHAR .

    $default  reduce using rule 71 (type_spec)


State 13

   74 type_spec: T_SHORT .

    $default  reduce using rule 74 (type_spec)


State 14

   77 type_spec: T_INT .

    $default  reduce using rule 77 (type_spec)


State 15

   70 type_spec: T_SIGNED . T_CHAR
   73          | T_SIGNED . T_SHORT
   76          | T_SIGNED . T_INT

    T_CHAR   shift, and go to state 57
    T_SHORT  shift, and go to state 58
    T_INT    shift, and go to state 59


State 16

   69 type_spec: T_UNSIGNED . T_CHAR
   72          | T_UNSIGNED . T_SHORT
   75          | T_UNSIGNED . T_INT

    T_CHAR   shift, and go to state 60
    T_SHORT  shift, and go to state 61
    T_INT    shift, and go to state 62


State 17

   78 type_spec: T_FLOAT .

    $default  reduce using rule 78 (type_spec)


State 18

   79 type_spec: T_DOUBLE .

    $default  reduce using rule 79 (type_spec)


State 19

   16 cond_stmt: T_IF . T_LPAREN asn_expr T_RPAREN stmt
   17          | T_IF . T_LPAREN asn_expr T_RPAREN stmt T_ELSE stmt

    T_LPAREN  shift, and go to state 63


State 20

   12 iter_stmt: T_FOR . T_LPAREN expr_stmt expr_stmt expr T_RPAREN stmt
   13          | T_FOR . T_LPAREN expr_stmt expr_stmt T_RPAREN stmt

    T_LPAREN  shift, and go to state 64


State 21

   14 iter_stmt: T_WHILE . T_LPAREN expr T_RPAREN stmt

    T_LPAREN  shift, and go to state 65


State 22

   15 iter_stmt: T_DO . stmt T_WHILE T_LPAREN expr T_RPAREN T_SEMIC

    T_IDENT     shift, and go to state 1
    T_CINT      shift, and go to state 2
    T_CDOUBLE   shift, and go to state 3
    T_LPAREN    shift, and go to state 4
    T_LCBRK     shift, and go to state 5
    T_MUL       shift, and go to state 6
    T_SUB       shift, and go to state 7
    T_INC       shift, and go to state 8
    T_DEC       shift, and go to state 9
    T_SEMIC     shift, and go to state 10
    T_VOID      shift, and go to state 11
    T_CHAR      shift, and go to state 12
    T_SHORT     shift, and go to state 13
    T_INT       shift, and go to state 14
    T_SIGNED    shift, and go to state 15
    T_UNSIGNED  shift, and go to state 16
    T_FLOAT     shift, and go to state 17
    T_DOUBLE    shift, and go to state 18
    T_IF        shift, and go to state 19
    T_FOR       shift, and go to state 20
    T_WHILE     shift, and go to state 21
    T_DO        shift, and go to state 22
    T_BAND      shift, and go to state 23

    T_SEMIC   [reduce using rule 23 (asn_expr)]
    $default  reduce using rule 23 (asn_expr)

    cmpd_stmt    go to state 26
    stmt         go to state 66
    declaration  go to state 28
    iter_stmt    go to state 29
    cond_stmt    go to state 30
    expr_stmt    go to state 31
    expr         go to state 32
    asn_expr     go to state 33
    unary        go to state 34
    uni_op       go to state 35
    postfix      go to state 36
    primary      go to state 37
    ident        go to state 38
    const        go to state 39
    band_expr    go to state 40
    xor_expr     go to state 41
    bor_expr     go to state 42
    and_expr     go to state 43
    or_expr      go to state 44
    rel_expr     go to state 45
    eq_expr      go to state 46
    add_expr     go to state 47
    mul_expr     go to state 48
    type_spec    go to state 49
    decl_spec    go to state 50


State 23

   32 uni_op: T_BAND .

    $default  reduce using rule 32 (uni_op)


State 24

    0 $accept: program . $end

    $end  shift, and go to state 67


State 25

    1 program: stmt_list .

    $default  reduce using rule 1 (program)


State 26

    6 stmt: cmpd_stmt .

    $default  reduce using rule 6 (stmt)


State 27

    2 stmt_list: stmt .
    3          | stmt . stmt_list

    T_IDENT     shift, and go to state 1
    T_CINT      shift, and go to state 2
    T_CDOUBLE   shift, and go to state 3
    T_LPAREN    shift, and go to state 4
    T_LCBRK     shift, and go to state 5
    T_MUL       shift, and go to state 6
    T_SUB       shift, and go to state 7
    T_INC       shift, and go to state 8
    T_DEC       shift, and go to state 9
    T_SEMIC     shift, and go to state 10
    T_VOID      shift, and go to state 11
    T_CHAR      shift, and go to state 12
    T_SHORT     shift, and go to state 13
    T_INT       shift, and go to state 14
    T_SIGNED    shift, and go to state 15
    T_UNSIGNED  shift, and go to state 16
    T_FLOAT     shift, and go to state 17
    T_DOUBLE    shift, and go to state 18
    T_IF        shift, and go to state 19
    T_FOR       shift, and go to state 20
    T_WHILE     shift, and go to state 21
    T_DO        shift, and go to state 22
    T_BAND      shift, and go to state 23

    T_COMMA   reduce using rule 23 (asn_expr)
    T_SEMIC   [reduce using rule 23 (asn_expr)]
    $default  reduce using rule 2 (stmt_list)

    stmt_list    go to state 68
    cmpd_stmt    go to state 26
    stmt         go to state 27
    declaration  go to state 28
    iter_stmt    go to state 29
    cond_stmt    go to state 30
    expr_stmt    go to state 31
    expr         go to state 32
    asn_expr     go to state 33
    unary        go to state 34
    uni_op       go to state 35
    postfix      go to state 36
    primary      go to state 37
    ident        go to state 38
    const        go to state 39
    band_expr    go to state 40
    xor_expr     go to state 41
    bor_expr     go to state 42
    and_expr     go to state 43
    or_expr      go to state 44
    rel_expr     go to state 45
    eq_expr      go to state 46
    add_expr     go to state 47
    mul_expr     go to state 48
    type_spec    go to state 49
    decl_spec    go to state 50


State 28

   20 expr_stmt: declaration .

    $default  reduce using rule 20 (expr_stmt)


State 29

    9 stmt: iter_stmt .

    $default  reduce using rule 9 (stmt)


State 30

    8 stmt: cond_stmt .

    $default  reduce using rule 8 (stmt)


State 31

    7 stmt: expr_stmt .

    $default  reduce using rule 7 (stmt)


State 32

   19 expr_stmt: expr . T_SEMIC
   22 expr: expr . T_COMMA asn_expr

    T_COMMA  shift, and go to state 69
    T_SEMIC  shift, and go to state 70


State 33

   21 expr: asn_expr .

    $default  reduce using rule 21 (expr)


State 34

   25 asn_expr: unary . asn_op asn_expr
   65 mul_expr: unary .

    T_ASN  shift, and go to state 71

    $default  reduce using rule 65 (mul_expr)

    asn_op  go to state 72


State 35

   29 unary: uni_op . unary

    T_IDENT    shift, and go to state 1
    T_CINT     shift, and go to state 2
    T_CDOUBLE  shift, and go to state 3
    T_LPAREN   shift, and go to state 4
    T_MUL      shift, and go to state 6
    T_SUB      shift, and go to state 7
    T_INC      shift, and go to state 8
    T_DEC      shift, and go to state 9
    T_BAND     shift, and go to state 23

    unary    go to state 73
    uni_op   go to state 35
    postfix  go to state 36
    primary  go to state 37
    ident    go to state 38
    const    go to state 39


State 36

   26 unary: postfix .
   34 postfix: postfix . T_LBRCK expr T_RBRCK
   35        | postfix . T_INC
   36        | postfix . T_DEC

    T_INC    shift, and go to state 74
    T_DEC    shift, and go to state 75
    T_LBRCK  shift, and go to state 76

    $default  reduce using rule 26 (unary)


State 37

   33 postfix: primary .

    $default  reduce using rule 33 (postfix)


State 38

   38 primary: ident .

    $default  reduce using rule 38 (primary)


State 39

   39 primary: const .

    $default  reduce using rule 39 (primary)


State 40

   45 band_expr: band_expr . T_BAND eq_expr
   46 xor_expr: band_expr .

    T_BAND  shift, and go to state 77

    $default  reduce using rule 46 (xor_expr)


State 41

   47 xor_expr: xor_expr . T_XOR band_expr
   48 bor_expr: xor_expr .

    T_XOR  shift, and go to state 78

    $default  reduce using rule 48 (bor_expr)


State 42

   49 bor_expr: bor_expr . T_BOR xor_expr
   50 and_expr: bor_expr .

    T_BOR  shift, and go to state 79

    $default  reduce using rule 50 (and_expr)


State 43

   51 and_expr: and_expr . T_AND bor_expr
   52 or_expr: and_expr .

    T_AND  shift, and go to state 80

    $default  reduce using rule 52 (or_expr)


State 44

   24 asn_expr: or_expr .
   53 or_expr: or_expr . T_OR and_expr

    T_OR  shift, and go to state 81

    $default  reduce using rule 24 (asn_expr)


State 45

   55 rel_expr: rel_expr . T_LT add_expr
   56         | rel_expr . T_GT add_expr
   57         | rel_expr . T_LTE add_expr
   58         | rel_expr . T_GTE add_expr
   59 eq_expr: rel_expr .

    T_LT   shift, and go to state 82
    T_LTE  shift, and go to state 83
    T_GTE  shift, and go to state 84
    T_GT   shift, and go to state 85

    $default  reduce using rule 59 (eq_expr)


State 46

   44 band_expr: eq_expr .
   60 eq_expr: eq_expr . T_EQ rel_expr
   61        | eq_expr . T_NEQ rel_expr

    T_EQ   shift, and go to state 86
    T_NEQ  shift, and go to state 87

    $default  reduce using rule 44 (band_expr)


State 47

   54 rel_expr: add_expr .
   63 add_expr: add_expr . T_PLUS mul_expr
   64         | add_expr . T_SUB mul_expr

    T_PLUS  shift, and go to state 88
    T_SUB   shift, and go to state 89

    $default  reduce using rule 54 (rel_expr)


State 48

   62 add_expr: mul_expr .
   66 mul_expr: mul_expr . T_MUL unary
   67         | mul_expr . T_DIV unary

    T_MUL  shift, and go to state 90
    T_DIV  shift, and go to state 91

    $default  reduce using rule 62 (add_expr)


State 49

   80 decl_spec: type_spec . declr

    T_MUL  shift, and go to state 92

    $default  reduce using rule 82 (pointer)

    declr    go to state 93
    pointer  go to state 94


State 50

   10 declaration: decl_spec .
   11            | decl_spec . T_ASN asn_expr T_SEMIC

    T_ASN  shift, and go to state 95

    $default  reduce using rule 10 (declaration)


State 51

   65 mul_expr: unary .

    $default  reduce using rule 65 (mul_expr)


State 52

   40 primary: T_LPAREN or_expr . T_RPAREN
   53 or_expr: or_expr . T_OR and_expr

    T_RPAREN  shift, and go to state 96
    T_OR      shift, and go to state 81


State 53

    4 cmpd_stmt: T_LCBRK T_RCBRK .

    $default  reduce using rule 4 (cmpd_stmt)


State 54

    5 cmpd_stmt: T_LCBRK stmt_list . T_RCBRK

    T_RCBRK  shift, and go to state 97


State 55

   27 unary: T_INC unary .

    $default  reduce using rule 27 (unary)


State 56

   28 unary: T_DEC unary .

    $default  reduce using rule 28 (unary)


State 57

   70 type_spec: T_SIGNED T_CHAR .

    $default  reduce using rule 70 (type_spec)


State 58
